# aoc-2024

./: .env  .gitignore  Cargo.toml  README.md  benchmarks.txt  justfile
bench/: day-11.bench.txt  day-15.bench.txt  day-16.bench.txt  day-17.bench.txt  day-19.bench.txt  day-23.bench.txt  day-25.bench.txt  day-6.bench.txt
day-1/: Cargo.toml
day-1/src/: lib.rs  part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs
day-11/: Cargo.toml
day-11/src/: part1.rs  part2.rs
day-13/: Cargo.toml
day-13/src/: part1.rs
day-14/: Cargo.toml
day-14/src/: lib.rs  part1.rs  part2.rs
day-15/: Cargo.toml
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/src/: lib.rs  part1.rs  part2.rs
day-17/: Cargo.toml
day-17/src/: lib.rs  part1.rs  part2.rs
day-19/: Cargo.toml
day-19/src/: lib.rs  part1.rs  part2.rs
day-2/: Cargo.toml
day-2/src/: part1.rs  part2.rs
day-20/: Cargo.toml
day-21/: Cargo.toml
day-21/src/: part1.rs
day-22/: Cargo.toml
day-23/: Cargo.toml
day-23/src/: lib.rs  part1.rs  part2.rs
day-25/: Cargo.toml
day-25/src/: part1.rs
day-3/: Cargo.toml
day-3/src/: lib.rs  part1.rs  part2.rs
day-4/: Cargo.toml
day-4/src/: part1.rs
day-5/: Cargo.toml
day-5/src/: part1.rs
day-6/: Cargo.toml
day-6/src/: lib.rs  part1.rs  part2.rs
day-7/: Cargo.toml
day-7/bench/: benchmark.rs
day-7/src/: part1.rs
day-8/: Cargo.toml
day-8/src/: part1.rs
day-9/: Cargo.toml
day-9/bench/: benchmark.rs
day-9/src/: part1.rs
day-lib/: Cargo.toml
template/: Cargo.toml
template/src/: part1.rs  part2.rs
