[workspace]
resolver = "2"
members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
glam = "0.29"
nom = "7.1"
itertools = "0.13"
tracing = "0.1"
divan = "0.1.15"
reqwest = {version = "0.12", features = ["blocking"]}
tokio = {version = "1.41.0", features = ["full"]}
clap = { version =  "4.5.21", features = ["derive"]}
