[workspace]
resolver = "2"
members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
glam = "0.29"
nom = "7.1"
itertools = "0.13"
tracing = "0.1.41"
divan = "0.1.17"
reqwest = {version = "0.12", features = ["blocking"]}
tokio = {version = "1.42.0", features = ["full"]}
clap = { version =  "4.5.23", features = ["derive"]}

[profile.bench]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true
