[package]
name = "day-15"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-15-bench"
path = "bench/benchmark.rs"
harness = false

