[package]
name = "day-21"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
pathfinding = "4.12.0"

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-21-bench"
path = "bench/benchmark.rs"
harness = false

