[package]
name = "day-25"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
transpose = "0.2.3"

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-25-bench"
path = "bench/benchmark.rs"
harness = false

