[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "{{project-name}}-bench"
path = "bench/benchmark.rs"
harness = false

